scripts/tests/errors/err_consecutive_operators.bu
// Test: consecutive operators without operand
// Expected: compile error

var x = 1 + * 2
